--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@ gems:
 permalink:           pretty
 
 # Setup
-url:                 http://qwtel.com
+url:                 http://chickadee-tech.github.io
 
 # Set to '' in case of hosting on GitHub pages,
 # i.e. `http://<username>.github.io`
-baseurl:             /hydejack
+baseurl:             ''
 
-title:               Hydejack
+title:               Chickadee Tech
 
 # Pagination
 paginate:            5
@@ -21,15 +21,13 @@ paginate_path:       '/page-:num/'
 
 # Markdown enabled, however don't use more than one paragraph (enforced by `>`)
 description:         >
-  A pretentious two-column [Jekyll](http://jekyllrb.com/) theme, stolen by [`@qwtel`{:style="background: rgba(255, 255, 255, 0.15)"}](https://twitter.com/qwtel)
-  from [Hyde](http://hyde.getpoole.com).
-  You could say it was.. [hydejacked](http://media3.giphy.com/media/makedRIckZBW8/giphy.gif).
+  Freelance software engineering from bare metal ARM to the cloud.
 
 # The tags listed as entries in the sidebar
-sidebar_tags:        [jekyll, hyde]
+sidebar_tags:        []
 
 # Fallback image and color if not overwritten for tag or post
-image:               /hydejack/public/img/nap.jpg
+image:               /public/img/nap.jpg
 color:               '#A85641'
 
 # Fonts
@@ -39,7 +37,7 @@ load_google_fonts:   'Roboto+Slab:700|PT+Serif:400,400italic,700,700italic'
 
 # About yourself
 author:
-  name:              'Florian Klampfer'
+  name:              'Scott Shawcroft'
 
   # This photo will be used in the about section
   photo:             http://qwtel.com/public/img/flo.jpg
@@ -47,20 +45,17 @@ author:
 
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Hi, I'm Florian or [`@qwtel`](https://www.twitter.com/qwtel), which isn't an acronym,
-    I just [wanted a short username](http://qwtel.com/how-to-find-a-short-username) and that one happened to be available.
-
-    Read my thoughts on [#software](http://qwtel.com/tag/software) and [#cryptoeconomics](http://qwtel.com/tag/cryptoeconomics).
+    Chickadee Tech is Scott Shawcroft's (aka [@tannewt](https://github.com/tannewt)) freelance hardware and software company.
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    facebook:        _username_
-    twitter:         _username_
-    google:          _number_
-    vk:              _username_
-    youtube:         _string___string___string_
+    facebook:        chickadeetech
+    twitter:         chickadee_tech
+    #google:          _number_
+    #vk:              _username_
+    youtube:         ChickadeeTech
     # vimeo:           _username_
     # vine:            _username_
     # spotify:         user/_number_
@@ -73,14 +68,14 @@ author:
     # behance:         _username_
     # deviantart:      _username_
     # ello:            _username_
-    # twitch:          _username_
+    twitch:          chickadeetech
     # steam:           _number_
     # reddit:          _username_
     # tumblr:          _username_
     # pinterest:       _username_
     # foursquare:      _number_
     # yelp:            _string_
-    # github:          _username_
+    github:          chickadee-tech
     # stackoverflow:   _number_/_username_
     # npm:             _username_
     # hackernews:      _username_
@@ -93,7 +88,7 @@ author:
     # paypal:          _username_
 
 # Remove to disable Google Anaylics
-google_analytics_id: 'UA-84025722-2'
+google_analytics_id: 'UA-71138404-1'
 
 # Setting a disqus subdomain will enable the comment section
 # disqus:            <username>
@@ -113,3 +108,7 @@ compress_html:
 
 sass:
   style:             compressed
+
+collections:
+  hardware:
+    output: true
