Change images and add hardware contents.

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description:         >
 sidebar_tags:        []
 
 # Fallback image and color if not overwritten for tag or post
-image:               /public/img/nap.jpg
+image:               /public/img/polystack.jpg
 color:               '#A85641'
 
 # Fonts
@@ -40,8 +40,8 @@ author:
   name:              'Scott Shawcroft'
 
   # This photo will be used in the about section
-  photo:             http://qwtel.com/public/img/flo.jpg
-  photo2x:           http://qwtel.com/public/img/flo@2x.jpg
+  photo:             /public/img/tannewt.jpg
+  photo2x:           /public/img/tannewt@2x.jpg
 
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
